--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     </head>
 
     <body>
-        <main></main>
+        <main>
+            <p id='msg'>loading... </p>
+            <p id='fps' style='font-size: 48px'></p>
+        </main>
         <script type='module' src='/src/main.ts'></script>
     </body>
 
