added resizing canvas and auto-adjusting fov

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <body>
         <main>
+            <section id='webgl-canvas'></section>
             <p id='msg'>loading... </p>
             <p id='fps' style='font-size: 48px'></p>
         </main>
