--- a/index.html
+++ b/index.html
@@ -7,12 +7,75 @@
 
         <title> Earth | Glitchcomet </title>
 
+        <style>
+
+            *, *:before, *:after {
+                box-sizing: border-box;
+            }
+
+            html{
+                margin: 0;
+                padding: 0;
+                background-color: black;
+                color: white;
+            }
+
+            body {
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                height: 100%;
+            }
+
+            #webgl-canvas {
+                position: fixed;
+                top: 0;
+                left: 0;
+                z-index: -2;
+                width: 100%;
+                height: 100%;
+            }
+
+            #webgl-canvas canvas {
+                width: 100%;
+                height: 100%;
+            }
+
+            #loading {
+                position: fixed;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                width: 100%;
+                height: 100%;
+
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+
+                font-size: 2.0vmin;
+                font-family: monospace;
+                color: #dedefe;
+                text-align: center;
+            }
+
+            #loading pre {
+                margin: 0;
+                padding: 0;
+            }
+
+        </style>
+
     </head>
 
     <body>
         <main>
-            <section id='webgl-canvas'></section>
-            <p id='msg'>loading... </p>
+            <section id='webgl-canvas'> </section>
+            <section id='loading'>
+                Loading
+                <pre id='loading-bar'>[■■--------]</pre>
+            </section>
             <p id='fps' style='font-size: 48px'></p>
         </main>
         <script type='module' src='/src/main.ts'></script>
