--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <section id='webgl-canvas'> </section>
 
             <section id='loading'>
-                Loading
+                loading
                 <pre id='loading-bar'>[■■--------]</pre>
             </section>
 
