added readme draft

--- a/index.html
+++ b/index.html
@@ -90,7 +90,18 @@
                     <!-- <a class='selected' href='#'>high</a> -->
                     <!-- <a href='#'>low</a> -->
                 </nav>
+
+                <section id='controls'>
+                    <h2>Controls: </h2>
+                    <p>
+                        Move: WASD, Arrow Keys or Click/Touch and drag<br>
+                        Zoom: +/- Keys or Mouse scroll
+                    </p>
+
+                </section>
+
             </article>
+
 
         </main>
         <script type='module' src='/src/main.ts'></script>
