--- a/index.html
+++ b/index.html
@@ -83,25 +83,90 @@
 
             <article id='content' style='display: none'>
                 <h1>earth</h1>
+
                 <nav>
-                    <a href='#'>controls</a>
-                    <a href='#'>about</a>
-                    <!-- | quality: -->
-                    <!-- <a class='selected' href='#'>high</a> -->
-                    <!-- <a href='#'>low</a> -->
+                    <button class='reset-btn' id='controls-btn'>controls</button>
+                    <button class='reset-btn' id='about-btn'>about</button>
                 </nav>
 
                 <section id='controls'>
-                    <h2>Controls: </h2>
-                    <p>
-                        Move: WASD, Arrow Keys or Click/Touch and drag<br>
-                        Zoom: +/- Keys or Mouse scroll
-                    </p>
-
+                    <h3>controls</h3>
+                    <ul>
+                        <li>move: wasd, arrow keys or click/touch and drag</li>
+                        <li>zoom: +/- keys or mouse scroll</li>
+                    </ul>
                 </section>
+
 
             </article>
 
+            <section id='about' style='display: none'>
+
+                <br>
+                <br>
+
+                <button class='reset-btn' id='close-about-btn'>
+                    ← <span style='text-decoration: underline'>back</span>
+                </button>
+                <br>
+                <br>
+
+                <h1> 🌍 Earth </h1>
+                <br>
+
+                <p>
+                    Realtime render of the earth built with pure WebGL and Typescript.
+                </p>
+
+                <p>
+                    It has the following features:
+                    <br>
+
+                    <ul>
+                        <li>Atmospheric rayleigh scattering</li>
+                        <li>Blinn phong lighting</li>
+                        <li>Sphere mesh created by recursively subdividing a handmade icosahedron</li>
+                        <li>Specular highlights masked to oceans, rivers and ice</li>
+                        <li>Separate day and night textures</li>
+                        <li>Orbit camera with auto-adjusting FOV for viewport size</li>
+                        <li>Implementations of Vec3, Matrix4 and Quaternion</li>
+                        <li>HDR tone mapping and gamma correction</li>
+                    </ul>
+                    <br>
+
+                    <span style='font-weight: bold'>github:</span>
+                    <a href='https://github.com/prdx23/earth/'>prdx23/earth</a>
+                </p>
+
+                <br>
+
+                <h3>Controls </h3>
+                <p>
+                    <ul>
+                        <li>move: wasd, arrow keys or click/touch and drag</li>
+                        <li>zoom: +/- keys or mouse scroll</li>
+                    </ul>
+                </p>
+
+                <br>
+
+                <h3> Attribution </h3>
+                <ul>
+                    <li><a href='https://visibleearth.nasa.gov/collection/1484/blue-marble'>NASA's Visible Earth collections</a></li>
+                    <li><a href='https://www.solarsystemscope.com/textures/'>Solar System Scope</a></li>
+                </ul>
+
+                <br>
+                <br>
+                <br>
+                <br>
+
+                <a href='https://glitchcomet.com'>glitchcomet.com →</a>
+
+                <br>
+                <br>
+
+            </section>
 
         </main>
         <script type='module' src='/src/main.ts'></script>
