added basic particle system and procedural stars

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                         <li>Sphere mesh created by recursively subdividing a handmade icosahedron</li>
                         <li>Specular highlights masked to oceans, rivers and ice</li>
                         <li>Separate day and night textures</li>
+                        <li>Basic particle system to render procedural stars</li>
                         <li>Orbit camera with auto-adjusting FOV for viewport size</li>
                         <li>Implementations of Vec3, Matrix4 and Quaternion</li>
                         <li>HDR tone mapping and gamma correction</li>
