added favicon, meta tags and analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
 
         <title> Earth | Glitchcomet </title>
 
+        <meta name="title" content="Earth | Glitchcomet">
+        <meta name="description" content="Realtime render of the earth built with WebGL and Typescript">
+        <meta name="author" content="Arsh">
+
+        <meta name="robots" content="index,follow">
+        <meta name="googlebot" content="index,follow">
+
+        <meta name="color-scheme" content="dark">
+        <meta name="theme-color" content="#000000">
+
+        <link rel="shortcut icon" href="/favicon.ico">
+        <link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
+
+        <meta property="og:title" content="Earth | Glitchcomet">
+        <meta property="og:url" content="https://earth.glitchcomet.com">
+        <meta property="og:description" content="Realtime render of the earth built with WebGL and Typescript">
+        <meta property="og:image" content="favicon.ico">
+        <meta property="og:type" content="website">
+
+        <meta property="twitter:card" content="summary">
+        <meta name="twitter:site" content="@glitchcomet" />
+
+
         <style>
 
             *, *:before, *:after {
@@ -66,6 +89,8 @@
             }
 
         </style>
+
+        <script defer data-domain="earth.glitchcomet.com" src="https://analytics.glitchcomet.com/js/script.js"></script>
 
     </head>
 
