updated analytics link

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         </style>
 
-        <script defer data-domain="earth.glitchcomet.com" src="https://analytics.glitchcomet.com/js/script.js"></script>
+        <script defer src="https://analytics.glitchcomet.com/script.js" data-website-id="ba82a606-7336-4fca-835f-1a5e72cd6c0d"></script>
 
     </head>
 
